--- a/K12.Report.ZhuengtouPointsCompetition/K12.Report.ZhuengtouPointsCompetition.csproj
+++ b/K12.Report.ZhuengtouPointsCompetition/K12.Report.ZhuengtouPointsCompetition.csproj
@@ -38,6 +38,7 @@
     <Reference Include="DevComponents.DotNetBar2, Version=9.5.0.1, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\..\ischool desktop\components\DevComponents.DotNetBar2.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="FISCA">
       <HintPath>..\..\..\..\..\..\..\..\ischool desktop\kernel\FISCA.dll</HintPath>
@@ -81,6 +82,10 @@
     </Reference>
     <Reference Include="K12.Presentation">
       <HintPath>..\..\..\..\..\..\..\..\ischool desktop\modules\SHSchoolLoader\K12.Presentation.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="SmartSchool.ErrorReporting">
+      <HintPath>..\..\..\..\..\..\..\..\ischool desktop\modules\SHSchoolLoader\SmartSchool.ErrorReporting.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
